[package]
name = "balls_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
rand = "0.8.5"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]
